# Robotics-project

./: .gitignore  README.md  run.sh
docker_ws/: Dockerfile.livelab1  build_livelab1.sh
ros_ws/: deleteme.md
ros_ws/src/bumperbot_bringup/: CMakeLists.txt  package.xml
ros_ws/src/bumperbot_bringup/config/: rplidar_a1.yaml
ros_ws/src/bumperbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
ros_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
ros_ws/src/bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py  twist_relay.py
ros_ws/src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml  twist_mux_topics.yaml
ros_ws/src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
ros_ws/src/bumperbot_description/: CMakeLists.txt  package.xml
ros_ws/src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
ros_ws/src/bumperbot_description/rviz/: rviz_conf.rviz  slam.rviz
ros_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
ros_ws/src/bumperbot_firmware/: CMakeLists.txt  bumperbot_interface.xml  package.xml
ros_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml
ros_ws/src/bumperbot_utils/: CMakeLists.txt  package.xml
ros_ws/src/leg_detector/: CMakeLists.txt  package.xml
ros_ws/src/mapping/: CMakeLists.txt  package.xml
ros_ws/src/mapping/launch/: slam.launch.py
ros_ws/src/navigation/: CMakeLists.txt  package.xml
ros_ws/src/rviz_config/: amcl.rviz
(+149 files in other folders)
